--- a/créditos.html
+++ b/créditos.html
@@ -159,7 +159,7 @@
       <h4>Beatriz Fermino Oliveira</h4>
       <h4>Brayan Leal Nascimento</h4>
       <h4>Rogério Basso</h4>
-        <a href="../Nova pasta/o Site.html">voltar</a>
+        <a href="../Nova pasta/index.html">voltar</a>
     </div>
 </body>
 </html>
