--- a/Mini jogos.html
+++ b/Mini jogos.html
@@ -153,7 +153,7 @@
       <a href="../Nova pasta/Verificador de senhas.html">VRF de sn</a>
       <a href="../Nova pasta/Pac/index.html">Caça-Virus</a>
       <br>
-      <a href="../Nova pasta/o Site.html">Voltar</a>
+      <a href="../Nova pasta/index.html">Voltar</a>
     </div>
 </body>
 </html>
