Update Fim quiz 21.html

--- a/Fim quiz 21.html
+++ b/Fim quiz 21.html
@@ -79,7 +79,7 @@
   
 </div>
 
-<a href="../Nova pasta/o Site.html" class="button-like">Fim da Pesquisa</a>
+<a href="../Nova pasta/index.html" class="button-like">Fim da Pesquisa</a>
 
 <script>
     // Recupera as informações do localStorage
