--- a/site/a.html
+++ b/site/a.html
@@ -130,7 +130,7 @@
             <p class="info-text"> Embora o cenário digital esteja em constante evolução e os métodos dos hackers se tornem cada vez mais sofisticados, a conscientização e a implementação de medidas de segurança eficazes podem fazer uma grande diferença. Em última análise, garantir a privacidade e a integridade dos dados depende de um esforço contínuo para se manter informado e protegido contra as ameaças online. A segurança digital não é apenas uma necessidade técnica, mas uma responsabilidade pessoal e coletiva para navegar no mundo digital com confiança</p><br>
         </div>
         <a href="#" class="button" id="voltarConclusao">Voltar</a>
-        <a href="../o Site.html" class="button">Sair</a>
+        <a href="../index.html" class="button">Sair</a>
     </div>
 
     <script>
